<resources>
    <string name="app_name">Meal chooser</string>

    <string name="settings">Settings</string>
    <string name="import_data">Import data</string>
    <string name="export_data">Export data</string>
    <string name="about">About</string>
    <string name="help">Help</string>

    <string name="title_ingredients">Ingredients</string>
    <string name="title_choose">Choose</string>
    <string name="title_dishes">Dishes</string>

    <string name="heading_ingredients">Ingredients</string>
    <string name="heading_choose">What should I eat?</string>
    <string name="heading_dishes">Dishes</string>
    <string name="heading_ingredient">Ingredient</string>

    <string name="name">Name</string>
    <string name="save">Save</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="time_minutes">Time (minutes)</string>
    <string name="ingredients">Ingredients</string>
    <string name="dishes">Dishes</string>
    <string name="change">Change</string>
    <string name="choose_dish">Choose a dish</string>

    <string name="heading_recommendation_history">Recommendation history</string>

    <string name="amount">Amount</string>
    <string name="is_available">Is available?</string>
    <string name="time_to_make">Time to make</string>
    <string name="considered">Considered?</string>
    <string name="heading_dish">Dish</string>
    <string name="is_considered">Is considered?</string>
</resources>