<?xml version="1.0" encoding="utf-8"?>
<!-- Content main layout of menu view -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".QuizActivity">
    <!-- Group of items, enable hiding the menu -->
    <group
        android:id="@+id/main_menu_group">
        <!-- Menu items -->
        <item android:id="@+id/settings"
            android:title="@string/settings"
            android:orderInCategory="100"
            app:showAsAction="never" />
        <item android:id="@+id/import_data"
            android:title="@string/import_data"
            android:orderInCategory="100"
            app:showAsAction="never" />
        <item android:id="@+id/export_data"
            android:title="@string/export_data"
            android:orderInCategory="100"
            app:showAsAction="never" />
        <item android:id="@+id/about"
            android:title="@string/about"
            android:orderInCategory="100"
            app:showAsAction="never" />
        <item android:id="@+id/help"
            android:title="@string/help"
            android:orderInCategory="100"
            app:showAsAction="never" />
    </group>
</menu>