<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <!-- Item heading (marks the start of the ingredient) -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/heading_ingredient" />

    <!-- Ingredient labels container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <!-- Ingredient name label -->
        <TextView
            android:text="@string/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/black" />

        <!-- Ingredient amount label -->
        <TextView
            android:text="@string/amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/black" />

    </LinearLayout>

    <!-- Ingredient inputs container -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <!-- Ingredient name input -->
        <EditText
            android:id="@+id/input_name"
            android:text=""
            android:inputType="numberDecimal|numberSigned"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black" />

        <!-- Ingredient amount input -->
        <EditText
            android:id="@+id/input_amount"
            android:text=""
            android:inputType="numberDecimal|numberSigned"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black" />

    </LinearLayout>

</LinearLayout>