<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DishesFragment">

    <!-- Container for main content of fragment -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Heading of Dishes fragment -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/heading_dishes" />

        <!-- Container for list header items -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <!-- Time to make label in list header -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@string/time_to_make" />

            <!-- Empty label above names of dishes in list header -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:text="" />

            <!-- Is considered label in list header -->
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:text="@string/considered" />

        </LinearLayout>

        <!-- Container for list of dishes -->
        <ListView
            android:id="@+id/list_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingBottom="80dp"
            android:clipToPadding="false" />

    </LinearLayout>

    <!-- Container for image button for adding new dish -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|end">

        <!-- Image button for adding new dish -->
        <ImageButton
            android:id="@+id/button_add"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:scaleType="centerInside"
            android:src="@drawable/icon_plus"
            android:background="@drawable/rounded_button" />

    </RelativeLayout>

</FrameLayout>